fix: prevent misuse of the update endpoint
