# internal/controller/dto/config.go
@@ -7,7 +7,6 @@ import (
 )
 
 // Config is the data transfer object for the config controller request and response.
-// TODO: there's should be a validation method to validate if the metadata is a valid JSON.
 type Config struct {
 	// Name is the name of the config.
 	Name string `json:"name,omitempty"`
